--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -2,12 +2,26 @@
 <html lang="en" ng-app>
     <head>
         <meta charset="utf-8">
-        <title>Authetication Form</title>
+        <title>Authentication Form</title>
         <link rel="stylesheet" href="./../node_modules/bootstrap/dist/css/bootstrap.min.css">
     </head>
     <body>
         <div class="container">
-            
+            <h1>Authetication Form</h1>
+            <form class="form">
+                <div class="form-group">
+                    <label for="">Name</label>
+                    <input type="text" id="name" name="name" />
+                </div>
+                <div class="form-group">
+                    <label for="">User Name</label>
+                    <input type="text" id="id" name="id"/>
+                </div>
+                <div class="form-group">
+                    <lable for="">Password</lable>
+                    <input type="password" id="password" name="password"/>
+                </div>
+            </form>
         </div>
     </body>
 </html>
