--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -23,5 +23,6 @@
                 </div>
             </form>
         </div>
+        <script src="./../node_modules/angular/angular.min.js"></script>
     </body>
 </html>
