--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Authetication Form</h1>
+            <h1>Authentication Form</h1>
             <form class="form">
                 <div class="form-group">
                     <label for="">Name</label>
