--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="minmax">
     <head>
         <meta charset="utf-8">
         <title>Authentication Form</title>
@@ -14,26 +14,28 @@
             </div>
         </nav>
    
-        <div class="container main-content">
+        <div class="container main-content" ng-controller="MinMaxCtrl">
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input class="form-controll" type="text" id="name" name="name"/>
+                    <input class="form-controll" type="text" id="name" name="name" ng-model="formModel.name"/>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input class="form-controll" type="email" id="email" name="email"/>
+                    <input class="form-controll" type="email" id="email" name="email" ng-Model="formModel.email"/>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input class="form-controll" type="password" id="password" name="password"/>
+                    <input class="form-controll" type="password" id="password" name="password" ng-model="formModle.password"/>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary">Register</button>
+                    <button class="btn btn-primary ng-click="onSubmit()">Register</button>
                 </div>
             </form>
+            <pre>{{ formModel | json }}</pre>
             </div>
         </div>
         <script src="./../node_modules/angular/angular.min.js"></script>
+        <script src="./../app.js"></script>
     </body>
 </html>
