--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -17,22 +17,27 @@
         <div class="container main-content" ng-controller="MinMaxCtrl">
             <form>
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <input class="form-controll" type="text" id="name" name="name" ng-model="formModel.name"/>
+                    <label for="name">Name:</label>
+                    <input class="form-control" type="text" id="name" name="name" ng-model="formModel.name"/>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input class="form-controll" type="email" id="email" name="email" ng-Model="formModel.email"/>
+                    <label for="email">Email:</label>
+                    <input class="form-control" type="email" id="email" name="email" ng-Model="formModel.email"/>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input class="form-controll" type="password" id="password" name="password" ng-model="formModle.password"/>
+                    <label for="username">Username:</label>
+                    <input class="form-control" type="text" id="username" name="username" ng-Model="formModel.username"/>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary ng-click="onSubmit()">Register</button>
+                    <label for="password">Password:</label>
+                    <input class="form-control" type="password" id="password" name="password" ng-model="formModle.password"/>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" ng-click="onSubmit()">Register</button>
                 </div>
             </form>
             <pre>{{ formModel | json }}</pre>
+            <h1 id="notification"></h1>
             </div>
         </div>
         <script src="./../node_modules/angular/angular.min.js"></script>
