--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -17,16 +17,28 @@
         <div class="container main-content" ng-controller="MinMaxCtrl">
             <form>
                 <div class="form-group">
-                    <label for="name">Name:</label>
+                    <label for="name">Name</label>
                     <input class="form-control" type="text" id="name" name="name" ng-model="formModel.name"/>
                 </div>
                 <div class="form-group">
-                    <label for="email">Email:</label>
+                    <label for="email">Email</label>
                     <input class="form-control" type="email" id="email" name="email" ng-Model="formModel.email"/>
                 </div>
                 <div class="form-group">
-                    <label for="username">Username:</label>
+                    <label for="username">Username</label>
                     <input class="form-control" type="text" id="username" name="username" ng-Model="formModel.username"/>
+                </div>
+                <div class="form-group">
+                    <label for="age">Age</label>
+                    <input class="form-control" type="number" id="age" name="age" ng-Model="formModel.age"/>
+                </div>
+                 <div class="form-group">
+                    <label for="sex">Sex</label>
+                    <select class="form-control" type="" id="sex" name="sex" ng-Model="formModel.sex">
+                        <option value="">Please Choose</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
