Add script reference to controller

--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -54,5 +54,6 @@
         </div>
         <script src="./../node_modules/angular/angular.min.js"></script>
         <script src="./../app.js"></script>
+        <script src="./../controllers/auth-form-controller.js"
     </body>
 </html>
