--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -41,7 +41,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password:</label>
+                    <label for="password">Password</label>
                     <input class="form-control" type="password" id="password" name="password" ng-model="formModle.password"/>
                 </div>
                 <div class="form-group">
@@ -51,9 +51,8 @@
             <pre>{{ formModel | json }}</pre>
             <h1 id="notification"></h1>
             </div>
-        </div>
         <script src="./../node_modules/angular/angular.min.js"></script>
         <script src="./../app.js"></script>
-        <script src="./../controllers/auth-form-controller.js"
+        <!--<script src="./../controllers/auth-form-controller.js"></script>-->
     </body>
 </html>
