Rewrite module and controller

--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input class="form-control" type="password" id="password" name="password" ng-model="formModle.password"/>
+                    <input class="form-control" type="password" id="password" name="password" ng-model="formModel.password"/>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-primary" ng-click="onSubmit()">Register</button>
