Change file structure

--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -53,6 +53,6 @@
             </div>
         <script src="./../node_modules/angular/angular.min.js"></script>
         <script src="./../app.js"></script>
-        <!--<script src="./../controllers/auth-form-controller.js"></script>-->
+        <script src="./../controllers/auth-form-controller.js"></script>
     </body>
 </html>
