--- a/views/auth-form.html
+++ b/views/auth-form.html
@@ -52,7 +52,7 @@
             <h1 id="notification"></h1>
             </div>
         <script src="./../node_modules/angular/angular.min.js"></script>
-        <script src="./../app.js"></script>
+        <script src="./../modules/auth-form-module.js"></script>
         <script src="./../controllers/auth-form-controller.js"></script>
     </body>
 </html>
